--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,27 @@
+.bigCounter {
+    text-align: center;
+    background: black;
+}
 
+.clock div{
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    height: 90px; 
+    padding: 10px;
+    margin: 3px;
+}
+
+.bigCounter div{
+       display: inline-block;
+       font-size: 60px;
+       line-height: 60px;
+       height: 90px; 
+       background: #101010;
+       color: white;
+       padding: 10px;
+       margin: 3px;
+}
 /* 
 
     You can write your own styles here...
